--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "babel-node server.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
