--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@slack/client": "^4.4.0",
     "axios": "^0.18.0",
+    "dialogflow": "^0.6.0",
     "googleapis": "^27.0.0"
   }
 }
