added file for mongo routes and established connection to mlab

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel": "mkdir -p build && babel server.js -o build/main.bundle.js",
     "lint": "eslint --fix *.js",
+    "backend-dev": "nodemon ./routes.js --exec babel-node",
     "start": "babel-node server.js"
   },
   "author": "",
